<resources>
    <string name="app_name">SmartHomeTEC-appmovil</string>
    <string name="username">Username</string>
    <string name="created_by_stephanie_and_jose_adrian">Created by Stephanie and Jose Adrian</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="logoname">logoname</string>
    <string name="logo">logo</string>
    <string name="bienvenido_a_smarthometec">Bienvenido a SmartHomeTEC</string>
    <string name="create_account">Crear cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="crear_contrasena">Crear Contraseña</string>
    <string name="continente">Continente</string>
    <string name="pais">País</string>
    <string name="direccion">Dirección</string>
    <string name="registrarse">Registrarse</string>
    <string name="salir">Salir</string>
    <string name="avatar">avatar</string>
    <string name="gestion_estructural">Gestión estructural</string>
    <string name="title_activity_gestion_s_h">Gestion de dispositivos</string>
    <string name="action_settings">Settings</string>
    <string name="tmp">TODO</string>
    <string name="log_out">Log out</string>
    <string name="gestion_text">A continuación seleccione los aposentos donde desea ubicar los dispositivos</string>
    <string name="cuarto_1">Cuarto 1</string>
    <string name="sala">Sala</string>
    <string name="cocina">Cocina</string>
    <string name="cuarto_2">Cuarto 2</string>
    <string name="cuarto_3">Cuarto 3</string>
    <string name="bano">Baño</string>
    <string name="garaje">Garaje</string>
    <string name="siguiente">siguiente</string>
    <string name="title_disp">Seleccione el tipo de dispositivo</string>
    <string name="seguridad">Seguridad</string>
    <string name="iluminacion">Iluminación</string>
    <string name="computadoras">Computadoras</string>
    <string name="celulares">Celulares</string>
    <string name="hogar">Hogar</string>
    <string name="perifericos">Periféricos</string>
    <string name="monitores">Monitores</string>
    <string name="memorias">Memorias</string>
    <string name="fitness">Fitness</string>
    <string name="automotriz">Automotriz</string>
    <string name="tipo_disp_info">Al seleccionar una de las casillas, se le redirigirá a la ventana específica para la gestión respectiva del dispositivo.</string>
    <string name="atras">Atrás</string>
</resources>