<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232F71"
    tools:context=".Gestion_SH">

    <CheckBox
        android:id="@+id/cuarto1"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="172dp"
        android:text="@string/cuarto_1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_text" />

    <CheckBox
        android:id="@+id/cuarto2"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="228dp"
        android:text="@string/cuarto_2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_text" />

    <CheckBox
        android:id="@+id/cuarto3"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="284dp"
        android:text="@string/cuarto_3"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_text" />

    <CheckBox
        android:id="@+id/garaje"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="340dp"
        android:text="@string/garaje"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_text" />

    <CheckBox
        android:id="@+id/bano"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="116dp"
        android:text="@string/bano"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_text" />

    <TextView
        android:id="@+id/gestion_title"
        android:layout_width="272dp"
        android:layout_height="43dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_activity_gestion_s_h"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gestion_text"
        android:layout_width="291dp"
        android:layout_height="69dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/gestion_text"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_title" />

    <CheckBox
        android:id="@+id/sala"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/sala"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_text" />

    <CheckBox
        android:id="@+id/cocina"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/cocina"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_text" />

    <Button
        android:id="@+id/button7"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:layout_marginTop="412dp"
        android:text="@string/log_out"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        app:backgroundTint="#D36D66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_text" />

    <Button
        android:id="@+id/button8"
        android:layout_width="132dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="412dp"
        android:text="@string/siguiente"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        app:backgroundTint="#95A1E6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gestion_text" />

</androidx.constraintlayout.widget.ConstraintLayout>