<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232F71"
    android:fitsSystemWindows="true"
    tools:context=".UserInformation"
    tools:openDrawer="start">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="248dp"
        android:layout_height="39dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="33dp"
        android:text="@string/bienvenido_a_smarthometec"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="119dp"
        android:layout_height="127dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/avatar" />

    <Button
        android:id="@+id/button5"
        android:layout_width="171dp"
        android:layout_height="76dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="144dp"
        android:text="@string/gestion_estructural"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        app:backgroundTint="#95A1E6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <Button
        android:id="@+id/button6"
        android:layout_width="171dp"
        android:layout_height="76dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="244dp"
        android:text="@string/log_out"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        app:backgroundTint="#D36D66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <TextView
        android:id="@+id/user_info"
        android:layout_width="206dp"
        android:layout_height="57dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="67dp"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>